# IVMED-TAURI

./: package.json
src/: index.html
src-tauri/: Cargo.toml  Db.db  dev.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/auth/: handlers.rs  mod.rs  models.rs
src-tauri/src/modules/filesystem/: file_ops.rs
src-tauri/src/modules/storage/: db.rs
src-tauri/src/modules/system/: info.rs
src-tauri/src/modules/window/: manager.rs
src/css/: base.css  home.css  login.css
src/js/: main.js  router.js
src/js/modules/auth/: authService.js  login.js
src/js/modules/dashboard/: dashboard.js
src/js/modules/home/: home.js
src/js/modules/modals/: modals.js
src/js/modules/navbar/: navbar.js
src/js/modules/shared/: api.js  cssManager.js  platform.js  utils.js
src/js/modules/storage/: localData.js
src/js/modules/ui/: shortcuts.js  titlebar.js
